# spectre

./: Abort_8hpp_source.html  ActionTesting_8hpp_source.html  AdamsBashforthN_8hpp.html  AdamsBashforthN_8hpp_source.html  Affine_8cpp.html  Affine_8hpp.html  Affine_8hpp_source.html  Algorithm_8hpp_source.html  ArrayIndex_8hpp_source.html  Benchmark_8cpp.html  BinaryFraction_8hpp_source.html  BoostHelpers_8hpp_source.html  Brick_8hpp_source.html  BulgedCube_8hpp_source.html  ComputeGhQuantities_8cpp.html  ComputeSpacetimeQuantities_8cpp.html  ComputeVolumeDuDt_8hpp_source.html  ConstGlobalCacheHelper_8hpp_source.html  ConstGlobalCache_8hpp_source.html  ConstantExpressions_8hpp.html  ConstantExpressions_8hpp_source.html  Contract_8hpp_source.html  CoordinateMap_8hpp_source.html  CreateInitialElement_8hpp_source.html  CurvedScalarWave_2Equations_8cpp.html  CurvedScalarWave_2Equations_8hpp.html  CurvedScalarWave_2Equations_8hpp_source.html  DataBoxHelpers_8hpp_source.html  DataBoxTag_8hpp.html  DataBoxTag_8hpp_source.html  DataBox_8hpp.html  DataBox_8hpp_source.html  DataOnSlice_8hpp.html  DataOnSlice_8hpp_source.html  DataVector_8cpp.html  DataVector_8hpp.html  DataVector_8hpp_source.html  Deferred_8hpp_source.html  DefiniteIntegral_8cpp.html  DefiniteIntegral_8hpp.html  (+422 more)
doc_coverage/: index-sort-l.html  index.html
docs/: References.bib
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  (+79 more)
src/PointwiseFunctions/AnalyticData/NewtonianEuler/: CMakeLists.txt  KhInstability.cpp  KhInstability.hpp
(+1170 files in other folders)
